Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Bibteximport by Focus</title>
+    <title>Bibtex Import by Focus</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Bibteximport</h1>
+        <h1>Bibtex Import</h1>
         <h2>Downloads references from MathSciNet</h2>
         <a href="https://github.com/Focus/BibtexImport" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -28,10 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a id="bibtex-import" class="anchor" href="#bibtex-import" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bibtex Import</h1>
-
-<p><em>Bibtex Import</em> is an app that lets users get Bibtex references from <a href="http://www.ams.org/mathscinet/index.html">MathSciNet</a>.</p>
+          <p><em>Bibtex Import</em> is an app that lets users get Bibtex references from <a href="http://www.ams.org/mathscinet/index.html">MathSciNet</a>.</p>
 
 <p><strong>You need a MathSciNet subscription or access in order to use this software</strong></p>
 
@@ -47,8 +44,7 @@
 <li>Automatically obtain remote access from MathSciNet</li>
 </ul>
 
-<h2>
-<a id="releases" class="anchor" href="#releases" aria-hidden="true"><span class="octicon octicon-link"></span></a>Releases</h2>
+<p>For older releases <a href="https://github.com/Focus/BibtexImport/releases">click here</a></p>
 
 <h1>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h1>
