--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
         <aside id="sidebar">
           <a href="https://github.com/Focus/BibtexImport/releases/download/v0.1/BibtexImport-darwin-x64.zip" class="button">
-            <small>Latest Stable</small>
-            Mac OSX 64bit
+            <small>Mac OSX 64bit</small>
+            Latest Stable
           </a>
           <a href="#" class="button">
-            <small>Latest Stable</small>
-            Windows
+            <small>Windows</small>
+            Latest Stable
           </a>
         </aside>
       </div>
