--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
         <aside id="sidebar">
           <a href="https://github.com/Focus/BibtexImport/releases/download/v0.1/BibtexImport-darwin-x64.zip" class="button">
-            <small>Mac OSX 64bit</small>
-            Latest Stable
+            <small>Binary</small>
+            OS X 64bit
           </a>
           <a href="#" class="button">
-            <small>Windows</small>
-            Latest Stable
+            <small>Binary</small>
+            Windows 64bit
           </a>
         </aside>
       </div>
