--- a/index.html
+++ b/index.html
@@ -57,13 +57,29 @@
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/Focus/BibtexImport/releases/download/v0.1/BibtexImport-darwin-x64.zip" class="button">
+          <a href="https://github.com/Focus/BibtexImport/releases/download/v1.0.0/BibtexImport.app.zip" class="button">
             <small>Binary</small>
             OS X 64bit
           </a>
           <a href="#" class="button">
             <small>Binary</small>
+            OS X 32bit
+          </a>
+          <a href="#" class="button">
+            <small>Binary</small>
             Windows 64bit
+          </a>
+          <a href="#" class="button">
+            <small>Binary</small>
+            Windows 32bit
+          </a>
+          <a href="#" class="button">
+            <small>Binary</small>
+            Linux 64bit
+          </a>
+          <a href="#" class="button">
+            <small>Binary</small>
+            Linux 32bit
           </a>
         </aside>
       </div>
