--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           </a>
           <a href="#" class="button">
             <small>Binary</small>
-            Windows 64bit
+            Win 64bit
           </a>
           <a href="#" class="button">
             <small>Binary</small>
-            Windows 32bit
+            Win 32bit
           </a>
           <a href="#" class="button">
             <small>Binary</small>
