--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     
-    <script src="./javascripts/main.js"></script>
+    <script src="./javascripts/os-detect.js"></script>
 
   
   </body>
