--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       </div>
     </div>
     
+    <script src="platform.js"></script>
+    
     <script src="./javascripts/os-detect.js"></script>
 
   
