--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     
-    <script src="platform.js"></script>
+    <script src="./javascripts/platform.js"></script>
     
     <script src="./javascripts/os-detect.js"></script>
 
